--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jasminewd2": "~2.0.2",
     "angular2-jwt": "^0.2.3",
     "angular2-materialize": "^15.0.4",
+    "cloudinary": "^1.9.0",
     "codelyzer": "~3.0.1",
     "core-js": "^2.4.1",
     "jasmine-core": "~2.6.2",
@@ -41,6 +42,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng2-cloudinary": "^0.9.2",
     "protractor": "~5.1.2",
     "rxjs": "^5.1.0",
     "ts-node": "~3.0.4",
