--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngx-translate/http-loader": "^0.1.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/youtube": "0.0.30",
     "angular2-jwt": "^0.2.3",
     "angular2-materialize": "^15.0.4",
     "cloudinary": "^1.9.0",
@@ -36,21 +37,26 @@
     "core-js": "^2.4.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
+    "jquery": "^3.2.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "materialize-css": "^0.100.1",
     "ng2-cloudinary": "^0.9.2",
+    "ng2-dnd": "^4.2.0",
     "protractor": "~5.1.2",
     "rxjs": "^5.1.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3",
+    "youtube": "^0.1.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@types/node": "^6.0.81"
+    "@types/node": "^6.0.81",
+    "ng2-youtube-player": "0.0.3"
   }
 }
