--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/youtube": "0.0.30",
     "angular2-jwt": "^0.2.3",
+    "angular2-markdown": "^1.6.0",
     "angular2-materialize": "^15.0.4",
     "cloudinary": "^1.9.0",
     "codelyzer": "~3.0.1",
@@ -38,6 +39,7 @@
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "jquery": "^3.2.1",
+    "jspdf": "^1.3.3",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
@@ -45,8 +47,12 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "materialize-css": "^0.100.1",
+    "materialize-pagination": "^0.2.1",
+    "md2": "git+https://github.com/Promact/md2.git",
+    "ng2-chips": "0.0.13",
     "ng2-cloudinary": "^0.9.2",
     "ng2-dnd": "^4.2.0",
+    "ngx-pagination": "^3.0.1",
     "protractor": "~5.1.2",
     "rxjs": "^5.1.0",
     "ts-node": "~3.0.4",
