--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
+    "@angular/animations": "^4.3.2",
+    "@angular/cdk": "github:angular/cdk-builds",
     "@angular/cli": "1.2.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
@@ -22,6 +23,7 @@
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/language-service": "^4.0.0",
+    "@angular/material": "github:angular/material2-builds",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
@@ -30,12 +32,14 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/youtube": "0.0.30",
+    "angular2-infinite-scroll": "^0.3.5",
     "angular2-jwt": "^0.2.3",
     "angular2-markdown": "^1.6.0",
     "angular2-materialize": "^15.0.4",
     "cloudinary": "^1.9.0",
     "codelyzer": "~3.0.1",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "jquery": "^3.2.1",
@@ -49,6 +53,7 @@
     "materialize-css": "^0.100.1",
     "materialize-pagination": "^0.2.1",
     "md2": "git+https://github.com/Promact/md2.git",
+    "md2-select": "0.0.1-alpha.0",
     "ng2-chips": "0.0.13",
     "ng2-cloudinary": "^0.9.2",
     "ng2-dnd": "^4.2.0",
