--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.0",
+    "@angular/flex-layout": "^2.0.0-beta.8",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/language-service": "^4.0.0",
-    "@angular/material": "github:angular/material2-builds",
+    "@angular/material": "^2.0.0-beta.1",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
@@ -32,7 +33,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/youtube": "0.0.30",
-    "angular2-infinite-scroll": "^0.3.5",
+    "angular-star-rating": "^3.0.3",
     "angular2-jwt": "^0.2.3",
     "angular2-markdown": "^1.6.0",
     "angular2-materialize": "^15.0.4",
@@ -57,6 +58,8 @@
     "ng2-chips": "0.0.13",
     "ng2-cloudinary": "^0.9.2",
     "ng2-dnd": "^4.2.0",
+    "ngx-bar-rating": "^1.1.0",
+    "ngx-infinite-scroll": "^0.5.1",
     "ngx-pagination": "^3.0.1",
     "protractor": "~5.1.2",
     "rxjs": "^5.1.0",
@@ -67,6 +70,7 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
+    "@types/hammerjs": "^2.0.34",
     "@types/node": "^6.0.81",
     "ng2-youtube-player": "0.0.3"
   }
