--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ngx-bar-rating": "^1.1.0",
     "ngx-infinite-scroll": "^0.5.1",
     "ngx-pagination": "^3.0.1",
+    "ngx-tooltip": "0.0.9",
     "protractor": "~5.1.2",
     "rxjs": "^5.1.0",
     "ts-node": "~3.0.4",
