--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.2",
+    "@angular/animations": "^4.3.3",
     "@angular/cdk": "github:angular/cdk-builds",
     "@angular/cli": "1.2.0",
     "@angular/common": "^4.0.0",
@@ -32,8 +32,10 @@
     "@ngx-translate/http-loader": "^0.1.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jspdf": "^1.1.31",
     "@types/youtube": "0.0.30",
     "angular-star-rating": "^3.0.3",
+    "angular-tag-cloud-module": "^1.4.0",
     "angular2-jwt": "^0.2.3",
     "angular2-markdown": "^1.6.0",
     "angular2-materialize": "^15.0.4",
@@ -55,13 +57,16 @@
     "materialize-pagination": "^0.2.1",
     "md2": "git+https://github.com/Promact/md2.git",
     "md2-select": "0.0.1-alpha.0",
+    "ng-pdf-make": "0.0.2",
     "ng2-chips": "0.0.13",
     "ng2-cloudinary": "^0.9.2",
     "ng2-dnd": "^4.2.0",
+    "ng2-select": "^1.2.0",
     "ngx-bar-rating": "^1.1.0",
     "ngx-infinite-scroll": "^0.5.1",
     "ngx-pagination": "^3.0.1",
     "ngx-tooltip": "0.0.9",
+    "pdfmake": "^0.1.27",
     "protractor": "~5.1.2",
     "rxjs": "^5.1.0",
     "ts-node": "~3.0.4",
